# PROJ-wifi-kriging

./: .gitignore  LICENSE  Makefile  README.md  TECHNIQUE.md  pyproject.toml
KrigiFi/: App.tsx  app.json  package-lock.json  package.json
KrigiFi/android/: settings.gradle
KrigiFi/android/app/: build.gradle
KrigiFi/android/app/src/main/: AndroidManifest.xml
KrigiFi/android/app/src/main/java/com/krigifi/: MainActivity.kt  MainApplication.kt
KrigiFi/android/app/src/main/res/values/: strings.xml
KrigiFi/ios/: Podfile
KrigiFi/ios/KrigiFi/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
KrigiFi/ios/KrigiFi.xcodeproj/: project.pbxproj
KrigiFi/ios/KrigiFi.xcodeproj/xcshareddata/xcschemes/: KrigiFi.xcscheme
KrigiFi/patches/: react-native-sensors+7.3.6.patch
KrigiFi/src/components/: CarteThermique.tsx  DessinateurPlan.tsx
KrigiFi/src/hooks/: useImu.ts  usePermissions.ts  useWifi.ts
KrigiFi/src/navigation/: AppNavigateur.tsx
KrigiFi/src/screens/: AccueilScreen.tsx  CarteScreen.tsx  MesureScreen.tsx  PlanScreen.tsx
KrigiFi/src/services/: api.ts  capteurs.ts  wifi.ts
KrigiFi/src/types/: index.ts
backend/: .env.example  database.py  main.py  modeles.py  requirements.txt  schemas.py
backend/kriging/: __init__.py  interpolation.py
backend/routers/: __init__.py  batiments.py  krigeage.py  mesures.py  plans.py
backend/wifi-kriging/: kriging_deepseek.py
frontend/src/: App.js
src/wifi-kriging/: kriging_deepseek.py
