[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-kriging-app"
version = "0.1.0"
description = "Build a WiFi heatmap using kriging interpolation."
authors = [{ name = "Louis Brusset", email = "louis.brusset@etu.minesparis.psl.eu" }]
requires-python = ">=3.9, <3.14"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["kriging", "variogram", "wifi", "heatmap", "interpolation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: interpolation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.9.0",
    "netcdf4>=1.7.2",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
    "ipykernel>=6.29.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/LouisBrusset/PROJ-wifi-kriging"

[project.scripts]
wifi-kriging = "wifi_kriging_app.cli:main"

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "LICENSE"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wifi-kriging*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true